# pytailer

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  fabfile.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
src/tailer/: __init__.py  __main__.py
tailer/: __init__.py  __main__.py  version.py
